--- a/plantsuwa/app/views/current_plants/_favourite_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_favourite_form.html.erb
@@ -1,11 +1,11 @@
 <div class="favourite-form">
 <% if current_user.favourite?(@current_plant) %>
-  <%= link_to destroy_favourite_path(id: @current_plant.id), method: :delete, class: "btn btn-primary btn-shrink" do %>
-  	<i class="fa fa-star-o fa-lg" style="color: rgb(255, 145, 0)" title="Unfavourite"></i><span class="over-400">&nbsp;&nbsp;Unfavourite</span>
+  <%= link_to destroy_favourite_path(id: @current_plant.id), method: :delete, class: "btn btn-orange btn-shrink" do %>
+  	<i class="fa fa-star-o fa-lg" title="Unfavourite"></i><span class="over-400">&nbsp;&nbsp;Unfavourite</span>
   <% end %>
 <% else %>
-  <%= link_to create_favourite_path(id: @current_plant.id), method: :new, class: "btn btn-primary btn-shrink" do %>
-  	<i class="fa fa-star fa-lg" style="color: rgb(255, 145, 0)" title="Favourite"></i><span class="over-400">&nbsp;&nbsp;Add Favourite</span>
+  <%= link_to create_favourite_path(id: @current_plant.id), method: :new, class: "btn btn-orange btn-shrink" do %>
+  	<i class="fa fa-star fa-lg" title="Favourite"></i><span class="over-400">&nbsp;&nbsp;Add Favourite</span>
   <% end %>
 <% end %>
 </div>
