--- a/plantsuwa/app/views/current_plants/_search_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_search_form.html.erb
@@ -5,7 +5,7 @@
 
 	<div class="center-wrapper">
 	  <div class="center-wrapper-inner">
-			<h2>Keyword Search</h2>
+			<h2>Keyword Search <%= link_to help_search_path do %>(Help <i class="fa fa-info-circle"></i>)<% end %></h2>
 		</div>
 	</div>
 	
@@ -19,10 +19,10 @@
 	<fieldset class="fieldset-search-form">
 	  <%= form_tag search_current_plants_path, :method => :get do %>
 		  <div class="search-bar-container">
-		  	<div style="width: 70%; float: left">
-		   		<%= auto_complete_field_tag_jquery(:search, params[:search], {:placeholder => "Search Plants", class: 'form-control' }) %>
+		  	<div class="kw-search-box">
+		   		<%= auto_complete_field_tag_jquery(:search, params[:search], {:placeholder => "Search Plants", class: 'form-control kw-search-box-inner' }) %>
 		   	</div>
-		   	<button id='submit_search' class="btn btn-primary" style="width: 30%; float: right"><i class="fa fa-search"></i>&nbsp;Search</button>
+		   	<button id='submit_search' class="btn btn-orange kw-search-button" style="width: 30%; float: right"><i class="fa fa-search"></i>&nbsp;Search</button>
 		  </div>
 	  <% end %>
 	</fieldset>
@@ -82,16 +82,17 @@
 					</div>
 				</div>
 			</div>
+		  <br/>
+			<div class="center-wrapper">
+		  	<div class="center-wrapper-inner">
+					<%= link_to_submit do %>
+						<button class="btn btn-orange"><i class="fa fa-search"></i>&nbsp;&nbsp;Search by Parameters</button>
+					<% end %>
+				</div>
+			</div>
 	  </fieldset>
 
-	  <br/>
-		<div class="center-wrapper">
-	  	<div class="center-wrapper-inner">
-				<%= link_to_submit do %>
-					<button class="btn btn-primary"><i class="fa fa-search"></i>&nbsp;&nbsp;Search by Parameters</button>
-				<% end %>
-			</div>
-		</div>
+
 
 	<% end %>
 	<br/>
