--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -2,6 +2,12 @@
 <% provide(:prev_page, 'Home') %>
 <% provide(:prev_link, root_path) %>
 
+<style type="text/css">
+	label.checkbox {
+		color: black;
+	}
+</style>
+
 <div class="padding-mobile">
 	
 
@@ -41,7 +47,7 @@
 	<hr/>	
 	<div class="center-wrapper">
 	 	<div class="center-wrapper-inner">
-			<button class="btn btn-primary" id="search-another-button" style="padding-left: 50px; padding-right: 50px"><i class="fa fa-search-plus"></i>&nbsp;&nbsp;Search Again!</button>
+			<button class="btn btn-orange" id="search-another-button" style="padding-left: 50px; padding-right: 50px"><i class="fa fa-search-plus"></i>&nbsp;&nbsp;Search Again!</button>
 		</div>
 	</div>
 	<br/>
@@ -55,13 +61,7 @@
 
 </div>
 
-		<div class="center-wrapper">
-	  		<div class="center-wrapper-inner">
-			<%= link_to help_search_path do %>
-				<button class="btn btn-primary" >Search Help</button>
-			<% end %>
-			</div>
-		</div>
+
 		<div style="height: 40px"></div>
 
 <% if signed_in? %>
