--- a/plantsuwa/app/views/users/show.html.erb
+++ b/plantsuwa/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <% provide(:prev_link, users_path) %>
 
 
-	<h1 class="h1-shrink" style="color: white"><span class="preceding-heading"><%= link_to 'Users', users_path %> <i class="fa fa-chevron-right"></i></span> <%= formatted_username(@user) %></h1>
+	<h1 class="h1-shrink" style="color: black"><span class="preceding-heading"><%= link_to 'Users', users_path %> <i class="fa fa-chevron-right"></i></span> <%= formatted_username(@user) %></h1>
 		<div class="btn-group" style="position: absolute; top: 50px; right: 20px">
 
 			<%= link_to edit_user_path(@user), class: 'btn-top btn btn-orange button-shrink', style: 'float: left;' do %>
