fixed checkbox colour

--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -6,6 +6,9 @@
 	label.checkbox {
 		color: black;
 	}
+	.check_boxes > .controls {
+  	background: white;
+	}
 </style>
 
 <div class="padding-mobile">
