changed checkbox colour again

--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -4,11 +4,9 @@
 
 <style type="text/css">
 	label.checkbox {
-		color: black;
+		color: white;
 	}
-	.check_boxes > .controls {
-  	background: white;
-	}
+
 </style>
 
 <div class="padding-mobile">
