--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -14,6 +14,21 @@
 
 
 	<% if @searched %>
+	
+	<div class="center-wrapper">
+  	<div class="center-wrapper-inner">
+  		<hr/>
+			<dt><%= pluralize(@results_count, 'plant') %> found.</dt>
+		</div>
+	</div>
+	<div style="height: 10px"></div>
+	
+	<div class="center-wrapper">
+	 	<div class="center-wrapper-inner">
+			<button class="btn btn-orange" id="search-another-button" style="padding-left: 50px; padding-right: 50px"><i class="fa fa-search-plus"></i>&nbsp;&nbsp;Search Again?</button>
+		</div>
+	</div>
+	
 		<div class="center-wrapper">
 	  	<div class="center-wrapper-inner">
 				<h2>Search Results: </h2>
@@ -37,13 +52,7 @@
 
 		<% end %>
 
-		<div class="center-wrapper">
-	  	<div class="center-wrapper-inner">
-	  		<hr/>
-				<dt><%= pluralize(@results_count, 'plant') %> found.</dt>
-			</div>
-		</div>
-		<div style="height: 40px"></div>
+		
 
 	<hr/>	
 	<div class="center-wrapper">
