added contact us page

--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -65,7 +65,7 @@
 	      <% end %>
 
 			  <li><a href="#">Site Map</a></li>
-			  <li><a href="#">Contact</a></li>
+			  <li><a href="/contact">Contact</a></li>
 		  </ul>  
 		</div><!-- /.navbar-collapse -->
 	</div>
