--- a/plantsuwa/app/views/current_plants/_search_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_search_form.html.erb
@@ -22,10 +22,10 @@
 		  	<div class="kw-search-box">
 		   		<%= auto_complete_field_tag_jquery(:search, params[:search], {:placeholder => "Search Plants", class: 'form-control kw-search-box-inner' }) %>
 		   	</div>
-		   	<button id='submit_search' class="btn btn-orange kw-search-button" style="width: 30%; float: right"><i class="fa fa-search"></i>&nbsp;Search</button>		   	
+		   	<button id='submit_search' class="btn btn-orange kw-search-button" style="width: 33%; float: right"><i class="fa fa-search"></i>&nbsp;Search</button>		   	
 		  </div>
 	  <% end %>
-		<p class="help-block" style="margin-top: 50px; margin-bottom: 0px">Hint: wrap search terms in double quotes (" ") to search for plants that contain those terms together.</p>
+		<p class="help-block" style="margin-top: 50px; margin-bottom: 0px">Hint: wrap search terms in double quotes (" ") to search for plants that contain those terms together. E.g. "large green leaves"</p>
 	</fieldset>
 
 
