--- a/plantsuwa/app/views/welcome/contact.html.erb
+++ b/plantsuwa/app/views/welcome/contact.html.erb
@@ -1,3 +1,7 @@
+<% provide(:title, 'Contact Us') %>
+<% provide(:prev_page, 'Home') %>
+<% provide(:prev_link, root_path) %>
+
 <div class="padding-mobile">
   <h2 style="text-align: center; margin-bottom: 35px"> Thanks for visiting!</h2>	
   
