--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -101,13 +101,14 @@
 <%= render 'layouts/ui/bottom_tabs_default' %>
 
 
-<!--<script type="text/javascript">
+<script type="text/javascript">
 	<% if @searched %>
 		$("#search-form-hidden").hide();
 	<% end %>
-	$("#search-another-button").click(function(){
+	
+	/*$("#search-another-button").click(function(){
   	$("#search-form-hidden").slideDown();
   	$('html').animate({scrollTop : $('#search-form-hidden').offset().top - 70 },500);
   	$("#search-another-button").hide();
-	}); 
-</script>-->
+	});*/
+</script>
