--- a/plantsuwa/app/views/welcome/contact.html.erb
+++ b/plantsuwa/app/views/welcome/contact.html.erb
@@ -3,26 +3,43 @@
 <% provide(:prev_link, root_path) %>
 
 <div class="padding-mobile">
-  <h2 style="text-align: center; margin-bottom: 35px"> Thanks for visiting!</h2>	
+  <h1 style="text-align: center; margin-bottom: 35px"> Thanks for visiting!</h1>	
+
+  <hr/>
   
-  <h2 style="text-align: center; margin-bottom: 35px"> Who are we? </h2>
-  <p> We're a bunch of UWA Computer Science students making this app for our CITS3200 Project. </p>
-  <p> Alphabetically, we are:  </p>
-  <p style="padding-left: 10px"> Jason Chao - 21397806</p>
-  <p style="padding-left: 10px"> Emma Hunt - 21334201</p>
-  <p style="padding-left: 10px"> Duncan Lissiman - 20938989</p>
-  <p style="padding-left: 10px"> Michael Stewart - 20947715 </p>
-  <p style="padding-left: 10px"> James Szklarz - 20505774 </p>
-  <p style="padding-left: 10px"> Chengy Wong - 20848476</p>
-  
-  <h2 style="text-align: center; margin-bottom: 35px"> How do you contact us? </h2>
-  <p> You can email any or all of us, at [our-student-number]@student.uwa.edu.au </p>
-  <p> Or, if you like you can email our client, Associate Professor Catharina Sack, at tinka.sack@uwa.edu.au </p>
-  
+  <div class="row">
+    <div class="col-md-6">
+      <h2 style="margin-bottom: 35px"> Who are we? </h2>
+      <p> We're a bunch of UWA Computer Science students making this app for our CITS3200 Project. </p>
+      <p> Alphabetically, we are:  </p>
+      <ul>
+        <li> Jason Chao - 21397806</li>
+        <li> Emma Hunt - 21334201</li>
+        <li> Duncan Lissiman - 20938989</li>
+        <li> Michael Stewart - 20947715 </li>
+        <li> James Szklarz - 20505774 </li>
+        <li> Chengy Wong - 20848476</li>
+      </ul>
+
+    </div>
+    <div class="col-md-6">
+
+
+      <h2 style="margin-bottom: 35px"> How can you contact us? </h2>
+      <p> You can email any or all of us, at [our-student-number]@student.uwa.edu.au </p>
+      <p> Or, if you like you can email our client, Associate Professor Catharina Sack, at tinka.sack@uwa.edu.au </p>
+      
+
+    </div>
+  </div>
+  <hr/>
+
   <h2 style="text-align: center; margin-bottom: 35px"> We appreciate all kinds of feedback </h2>
-  <p> Big or small, good or bad. </p> 
-  <p> If you want more features, or if you think we could be doing something better - we'd love to hear you're ideas! </p>
-  <p> Please don't hesitate to email :) </p>
+  <div style="max-width: 400px; margin: 0 auto;">
+  <p style="text-align: center"> Big or small, good or bad. </p> 
+  <p style="text-align: center"> If you want more features, or if you think we could be doing something better - we'd love to hear your ideas! </p>
+  <p style="text-align: center"> Please don't hesitate to email :) </p>
+  </div>
 
   
 </div>
