seeded genus and species

--- a/plantsuwa/app/views/current_plants/_search_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_search_form.html.erb
@@ -25,7 +25,8 @@
 		   	<button id='submit_search' class="btn btn-orange kw-search-button" style="width: 33%; float: right"><i class="fa fa-search"></i>&nbsp;Search</button>		   	
 		  </div>
 	  <% end %>
-		<p class="help-block" style="margin-top: 50px; margin-bottom: 0px">Hint: wrap search terms in double quotes (" ") to search for plants that contain those terms together. E.g. "large green leaves"</p>
+		<p class="help-block" style="margin-top: 50px; margin-bottom: 0px">Hint: wrap search terms in double quotes (" ") to search for plants that contain those terms together. E.g. &nbsp;&nbsp;<b>"large green leaves"</b></p>
+		<p class="help-block" style="margin-top: 5px; margin-bottom: 0px">Hint: You can specify exactly which field to search over with '~'. E.g. &nbsp;&nbsp;<b>genus ~ banksia</b>&nbsp; or&nbsp; <b>description ~ bushy</b></p>
 	</fieldset>
 
 
