--- a/plantsuwa/app/views/welcome/contact.html.erb
+++ b/plantsuwa/app/views/welcome/contact.html.erb
@@ -2,14 +2,16 @@
 <% provide(:prev_page, 'Home') %>
 <% provide(:prev_link, root_path) %>
 
-<div class="padding-mobile">
-  <h1 style="text-align: center; margin-bottom: 35px"> Thanks for visiting!</h1>	
 
-  <hr/>
+  <div class="thanks-for-visiting-container">
+    <h1 class="contact-us-heading feedback-welcome-heading"> Thanks for visiting!</h1>
+    <hr/>
+  </div>
   
+  <div class="padding-mobile">
   <div class="row">
     <div class="col-md-6">
-      <h2 style="margin-bottom: 35px"> Who are we? </h2>
+      <h2 class="contact-us-heading"> Who are we? </h2>
       <p> We're a bunch of UWA Computer Science students making this app for our CITS3200 Project. </p>
       <p> Alphabetically, we are:  </p>
       <ul>
@@ -25,25 +27,37 @@
     <div class="col-md-6">
 
 
-      <h2 style="margin-bottom: 35px"> How can you contact us? </h2>
+      <h2 class="contact-us-heading"> How can you contact us? </h2>
       <p> You can email any or all of us, at [our-student-number]@student.uwa.edu.au </p>
-      <p> Or, if you like you can email our client, Associate Professor Catharina Sack, at tinka.sack@uwa.edu.au </p>
+      <p> Or, if you like you can email our client, Associate Professor Catharina Sack, at <a href="mailto:tinka.sack@uwa.edu.au" target="_blank">tinka.sack@uwa.edu.au</a>.</p>
       
 
     </div>
   </div>
+
+  </div>
   <hr/>
 
-  <h2 style="text-align: center; margin-bottom: 35px"> We appreciate all kinds of feedback </h2>
-  <div style="max-width: 400px; margin: 0 auto;">
-  <p style="text-align: center"> Big or small, good or bad. </p> 
-  <p style="text-align: center"> If you want more features, or if you think we could be doing something better - we'd love to hear your ideas! </p>
-  <p style="text-align: center"> Please don't hesitate to email :) </p>
+  <div class="feedback-welcome-container">
+    <h2 class="contact-us-heading feedback-welcome-heading"> We appreciate all kinds of feedback </h2>
+    <div class="feedback-welcome">
+      <p> Big or small, good or bad. </p> 
+      <p> If you want more features, or if you think we could be doing something better - we'd love to hear your ideas! </p>
+      <p> Please don't hesitate to email :) </p>
+    </div>
+    <hr/>  
   </div>
 
-  
+<div class="padding-mobile">
+  <ul class="sources-list">
+    <li>The site was built using <a href="http://rubyonrails.org/" target="_blank">Ruby on Rails</a></li>
+    <li>Styled using <a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap</a></li>
+    <li>Uses the <a href="http://www.appelsiini.net/projects/lazyload" target="_blank">Lazy Load jQuery plugin by Mika Tuupola</a></li>
+    <li>All icons are from <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">Font Awesome</a></li>
+  </ul>
 </div>
 
+<br/>
 
 <% if signed_in? %>
   <div style="height: 30px"></div>
