--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -64,7 +64,7 @@
 			    <li><%= link_to 'Log in', log_in_path(pp_name: yield(:title), pp_path: request.path) %></li>
 	      <% end %>
 
-			  <li><a href="#">Site Map</a></li>
+			  <!--<li><a href="#">Site Map</a></li>-->
 			  <li><a href="/contact">Contact</a></li>
 		  </ul>  
 		</div><!-- /.navbar-collapse -->
