--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -79,9 +79,10 @@
 	<% end %>
 
 
-
-	<%= render 'search_form' %>
-	<div style="height: 40px"></div>
+	<% if !@searched %>
+		<%= render 'search_form' %>
+		<div style="height: 40px"></div>
+	<% end %>
 
 </div>
 
