--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -1053,3 +1053,15 @@ ul.sources-list > li {
   display: inline-block;
   margin-right: 20px;
 }
+
+p.help-block.kwsearch {
+  margin-bottom: 0px;
+}
+
+h3.or-block {
+  margin-left: 45%;
+  margin-right: 45%;
+  background: rgb(10, 10, 10); 
+  text-align: center;
+  margin-top: -35px;
+}
