--- a/plantsuwa/app/views/current_plants/_search_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_search_form.html.erb
@@ -5,7 +5,7 @@
 
 	<div class="center-wrapper">
 	  <div class="center-wrapper-inner">
-			<h2>Keyword Search <%= link_to help_search_path do %>(Help <i class="fa fa-info-circle"></i>)<% end %></h2>
+			<h2>Keyword Search</h2>
 		</div>
 	</div>
 	
@@ -25,14 +25,20 @@
 		   	<button id='submit_search' class="btn btn-orange kw-search-button" style="width: 33%; float: right"><i class="fa fa-search"></i>&nbsp;Search</button>		   	
 		  </div>
 	  <% end %>
-		<p class="help-block" style="margin-top: 50px; margin-bottom: 0px">Hint: wrap search terms in double quotes (" ") to search for plants that contain those terms together. E.g. &nbsp;&nbsp;<b>"large green leaves"</b></p>
-		<p class="help-block" style="margin-top: 5px; margin-bottom: 0px">Hint: You can specify exactly which field to search over with '~'. E.g. &nbsp;&nbsp;<b>genus ~ banksia</b>&nbsp; or&nbsp; <b>description ~ bushy</b></p>
+		<p class="help-block kwsearch" style="margin-top: 50px;">Hint: wrap search terms in double quotes (" ") to search for plants that contain those terms together. E.g. &nbsp;&nbsp;<b>"large green leaves"</b></p>
+		<p class="help-block kwsearch" style="margin-top: 5px;">Hint: You can specify exactly which field to search over with '~'. E.g. &nbsp;&nbsp;<b>genus ~ banksia</b>&nbsp; or&nbsp; <b>description ~ bushy</b></p>
+		<p class="help-block kwsearch" style="margin-top: 5px; font-weight: 700"><%= link_to help_search_path do %><i class="fa fa-info-circle"></i>&nbsp;More Hints<% end %></p>
 	</fieldset>
 
 
 
+	<div style="height: 50px"></div>
+
+	<hr style="margin-top: 20px"/>
+	<h3 class="or-block">OR</h3>
+
 	<div style="height: 20px"></div>
-	<hr/>	
+
 
 	<div class="center-wrapper">
 	  <div class="center-wrapper-inner">
