--- a/plantsuwa/app/views/users/_form.html.erb
+++ b/plantsuwa/app/views/users/_form.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col-sm-6">
   		<%= f.input  :username, autofocus: true %>
-  		<%= f.input  :email %>
+  		<%= f.input  :email, label: "Email (optional)" %>
   	</div>
   	<div class="col-sm-6">
 		  <%= f.input  :password %>
